--- a/src/app/app.html
+++ b/src/app/app.html
@@ -44,7 +44,7 @@
     }
     <app-game-info-block [username]="username()" [opponentUsername]="opponentUsername()" />
     @if (gameStarted()) {
-      <app-board [isPlayerTurn]="isPlayerWhite() == isWhiteTurn()" [sticksValue]="sticksValue()" [whitePawns]="whitePawns()" [blackPawns]="blackPawns()" [movablePawns]="movablePawns()" />
+      <app-board [userid]="userid()" [isPlayerTurn]="isPlayerWhite() == isWhiteTurn()" [sticksValue]="sticksValue()" [whitePawns]="whitePawns()" [blackPawns]="blackPawns()" [movablePawns]="movablePawns()" />
       @if (isPlayerWhite() == isWhiteTurn() && movablePawns().length == 0) {
         <button (click)="skipTurn()">Skip turn</button>
       }
