Show game over message, and refresh values for reuse

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,15 +1,19 @@
 <main class="main">
   <div>
     <h1>{{ title() }}</h1>
-    @if (!gameStarted()) {
+    @if (gameOver()) {
+      <h2>Game over!</h2>
+      <div>{{ winner() == userid() ?  'You won!' : 'You lost...' }}</div>
+    }
+    @if (!gameStarted() || gameOver()) {
       <div class="join-game-button">
         <button (click)="requestJoinGame()">Join Game</button>
       </div>
     }
-    @if (userid().length > 0) {
+    @if (userid().length > 0 && !gameOver()) {
       <app-game-info-block [username]="username()" [opponentUsername]="opponentUsername()" />
     }
-    @if (gameStarted()) {
+    @if (gameStarted() && !gameOver()) {
       <app-board [userid]="userid()" [isPlayerTurn]="isPlayerWhite() == isWhiteTurn()" [sticksValue]="sticksValue()" [whitePawns]="whitePawns()" [blackPawns]="blackPawns()" [movablePawns]="movablePawns()" />
       @if (isPlayerWhite() == isWhiteTurn() && movablePawns().length == 0) {
         <button (click)="skipTurn()">Skip turn</button>
