--- a/src/app/app.css
+++ b/src/app/app.css
@@ -44,3 +44,29 @@ main {
     background-color: rgba(255, 255, 0, 0.753);
     width: max-content;
 }
+
+.spinner-container {
+  color: rgb(90, 38, 4);
+  display: flex;
+  align-items: center;
+  z-index: 9999;
+}
+
+.spinner {
+  border: 4px solid rgba(90, 39, 4, 0.452);
+  border-radius: 50%;
+  border-top: 4px solid rgba(128, 84, 55, 0.452);
+  width: 40px;
+  height: 40px;
+  padding-right: 20px;
+  animation: spin 1s linear infinite;
+}
+
+.spinner-container h2 {
+    padding-left: 20px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
