--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,19 +1,25 @@
 <main class="main">
   <div>
     <h1>{{ title() }}</h1>
-    @if (gameOver()) {
+    @if (waitingForMatch) {
+      <div class="spinner-container">
+        <div class="spinner"></div>
+        <h2>Waiting to be matched...</h2>
+      </div>
+    }
+    @if (gameOver) {
       <h2>Game over!</h2>
       <div>{{ winner() == userid() ?  'You won!' : 'You lost...' }}</div>
     }
-    @if (!gameStarted() || gameOver()) {
+    @if (!waitingForMatch && (!gameStarted || gameOver)) {
       <div class="join-game-button">
         <button (click)="requestJoinMultiplayerGame()">Join Game</button>
       </div>
     }
-    @if (userid().length > 0 && !gameOver()) {
+    @if (userid().length > 0 && !gameOver) {
       <app-game-info-block [username]="username()" [opponentUsername]="opponentUsername()" />
     }
-    @if (gameStarted() && !gameOver()) {
+    @if (gameStarted && !gameOver) {
       <app-board [userid]="userid()" [isPlayerTurn]="isPlayerWhite() == isWhiteTurn()" [sticksValue]="sticksValue()" [whitePawns]="whitePawns()" [blackPawns]="blackPawns()" [movablePawns]="movablePawns()" [isMultiplayer]="isMultiplayer()" />
       @if (isPlayerWhite() == isWhiteTurn() && movablePawns().length == 0) {
         <button (click)="skipTurn()">Skip turn</button>
