--- a/src/app/app.css
+++ b/src/app/app.css
@@ -53,6 +53,11 @@ main {
     text-align: center;
 }
 
+.join-game-button button {
+    
+    font-family: "IM Fell Great Primer", serif;
+}
+
 .player-turn-reminder {
     background-color: rgba(255, 255, 0, 0.753);
     width: max-content;
