--- a/src/app/components/game-info-block/game-info-block.css
+++ b/src/app/components/game-info-block/game-info-block.css
@@ -1,3 +1,20 @@
-.two-column-grid-container {
-    padding-bottom: 15px;
+.two-column-flex-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+.flex-item {
+    background-color: gray;
+    border: 1px solid #313131;
+    padding: 5px;
+}
+
+.player-identifier {
+    font-size:large;
+    font-weight: bold;
+    padding-right: 10px;
 }
