--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/material-icons/iconfont/material-icons.css';
 
-.two-column-grid-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-}
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.white {
+  color: white;
+}
+
+.black {
+  color: black;
+}
+
+.scale-down {
+  font-size: clamp(0.6rem, 1.6vw, 3rem);
+}
