Add link to game rules
Resolve #20

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,9 @@
 <main class="main">
   <div>
+    <a href="https://royalur.net/senet#how-to-play" target="_blank" rel="noopener noreferrer">
+      How to play 
+      <span class="material-icons">open_in_new</span>
+    </a>
     <h2 class="intro">Ancient Rematch presents:</h2>
     <h1>Senet Client</h1>
     @if (waitingForMatch) {
